syntax = "proto3";

option go_package = "github.com/brianykl/cashew/services/crypto/proto";

service CryptoService {
    rpc HashPassword(HashPasswordRequest) returns (HashPasswordResponse);
    rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse);
    rpc HashPII(HashPIIRequest) returns (HashPIIResponse);
    rpc VerifyPII(VerifyPIIRequest) returns (VerifyPIIResponse);
}

message HashPasswordRequest {
    string password = 1;
    Argon2idParams params = 2;
}

message HashPasswordResponse {
    string encodedHash = 1;
}

message VerifyPasswordRequest {
    string password = 1;
    string encodedHash = 2;
    Argon2idParams params = 3;
}

message VerifyPasswordResponse {
    bool isValid = 1;
}

message HashPIIRequest {
    string data = 1;
    bytes key = 2;
}

message HashPIIResponse {
    string encodedHash = 1;
}

message VerifyPIIRequest {
    string data = 1;
    string encodedHash = 2;
    bytes key = 3;
}

message VerifyPIIResponse {
    bool isValid = 1;
}

message Argon2idParams {
    uint32 memory = 1;
    uint32 iterations = 2;
    uint32 parallelism = 3;
    uint32 saltLength = 4;
    uint32 keyLength = 5;
}